# p3-demo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
demo-presets/: Cargo.toml
demo-presets/src/: action.rs  anim.rs  color_util.rs  diff_fmt.rs  help.rs  lib.rs  persist.rs  presets.rs  resize.rs  snapshot.rs  state.rs  status.rs
demo-presets/tests/: adjacent.rs  anim.rs  breakpoints.rs  color_util.rs  diff_fmt.rs  drag.rs  focus.rs  overlay.rs  presets.rs  resize.rs  scroll.rs  snapshot.rs  state.rs
egui-demo/: Cargo.toml
egui-demo/src/: main.rs
src/: main.rs
wasm-demo/: Cargo.toml
wasm-demo/src/: catalog.rs  diff.rs  engine.rs  error.rs  lib.rs  overlay.rs  theme.rs  types.rs
wasm-demo/www/: app.js  index.html  style.css
