[package]
name = "panes-demo"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
panes = "0.11"
panes-ratatui = "0.4.1"
palette-core = { version = "0.8", features = ["terminal"] }
ratatui = "0.30"
crossterm = "0.28"

[workspace]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
