[package]
name = "panes-demo"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "panes-demo"
path = "src/main.rs"

[[bin]]
name = "generate-css-demo"
path = "src/bin/generate_css_demo.rs"

[dependencies]
panes = "0.15"
panes-css = "0.5"
panes-ratatui = "0.4.5"
palette-core = { version = "0.11", features = ["terminal"] }
ratatui = "0.30"
crossterm = "0.28"
demo-presets = { path = "demo-presets" }
thiserror = "2"

[workspace]
members = ["demo-presets", "wasm-demo", "egui-demo"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
