[package]
name = "demo-presets"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
panes = { version = "0.15", features = ["serde"] }
palette-core = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taffy = "0.9"
thiserror = "2"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
