[package]
name = "demo-presets"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
panes = { version = "0.18", features = ["serde"] }
palette-core = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taffy = "0.9"
thiserror = "2"

[dev-dependencies]
panes-css = "0.7"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
