[package]
name = "demo-presets"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
panes = { version = "0.19", features = ["serde"] }
palette-core = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taffy = "0.10"
thiserror = "2"

[dev-dependencies]
panes-css = "0.8"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
