[package]
name = "panes-egui-demo"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
demo-presets = { path = "../demo-presets" }
panes = "0.18"
panes-egui = "0.4.8"
palette-core = "0.12"
eframe = "0.34"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
