[package]
name = "panes-wasm-demo"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
demo-presets = { path = "../demo-presets" }
panes = "0.19"
panes-wasm = { version = "0.6", features = ["js"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
